--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -1,10 +1,20 @@
 [main]
 inum = 44
 fnum = 2.2
+istartup = 0
+istartmin = 0
+imintray = 0
+iminx = 0
+iuserecycle = 0
+irecyclecapacity = 1
+isaveoption = 0
+ishowsaveprompt = 0
+ssavelocation = 0
+iuselastsave = 0
 
 [temp]
 sstring = sadasd
 
 [list]
-lilist = [2, 3, 4]
+lilist = 2|3|4
 
