--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -1,7 +1,5 @@
 [main]
-inum = 44
-fnum = 2.2
-istartup = 0
+istartup = 1
 istartmin = 0
 imintray = 0
 iminx = 0
@@ -9,12 +7,6 @@ iuserecycle = 0
 irecyclecapacity = 1
 isaveoption = 0
 ishowsaveprompt = 0
-ssavelocation = 0
+ssavelocation = D:/Python Project/screenCap
 iuselastsave = 0
-
-[temp]
-sstring = sadasd
-
-[list]
-lilist = 2|3|4
 
