--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -1,12 +1,18 @@
 [main]
 istartup = 1
 istartmin = 0
-imintray = 0
+imintray = 1
 iminx = 0
-iuserecycle = 0
+iuserecycle = 1
 irecyclecapacity = 1
 isaveoption = 0
-ishowsaveprompt = 0
+ishowsaveprompt = 1
 ssavelocation = D:/Python Project/screenCap
-iuselastsave = 0
+iuselastsave = 1
+
+[global]
+licapture = 17|49
+
+[local]
+licopy = 17|50
 
