canvas done and tested

--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -1,18 +1,23 @@
 [main]
-istartup = 1
+istartup = 0
 istartmin = 0
-imintray = 1
+imintray = 0
 iminx = 0
-iuserecycle = 1
+iuserecycle = 0
 irecyclecapacity = 1
 isaveoption = 0
-ishowsaveprompt = 1
-ssavelocation = D:/Python Project/screenCap
-iuselastsave = 1
+ishowsaveprompt = 0
+ssavelocation = 
+iuselastsave = 0
 
 [global]
 licapture = 17|49
 
 [local]
 licopy = 17|50
+
+[painter]
+isize = 20
+ialpha = 100
+lscolors = #0000ff|#ffffff|#ff69b4|#dc143c|#fd6500|#ffd600|#a52a2a|#32cd32|#4169e1|#8A2BE2
 
