--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -21,3 +21,6 @@ isize = 20
 ialpha = 100
 lscolors = #0000ff|#ffffff|#ff69b4|#dc143c|#fd6500|#ffd600|#a52a2a|#32cd32|#4169e1|#8A2BE2
 
+[reycler]
+imaxsize = 10
+
