right click menu

--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -24,3 +24,7 @@ lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#ffd600|#a52a2a|#32cd32|#4169
 [reycler]
 imaxsize = 50
 
+[right_menu]
+lsavailablecommands = copy|cut|save|close|crop
+lscurrentcommands = 
+
