--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -3,7 +3,7 @@ istartup = 0
 istartmin = 0
 imintray = 0
 iminx = 0
-iuserecycle = 0
+iuserecycle = 1
 irecyclecapacity = 1
 isaveoption = 0
 ishowsaveprompt = 0
@@ -14,12 +14,12 @@ iuselastsave = 0
 licapture = 17|49
 
 [local]
-licopy = 17|50
+licopy = 13
 
 [painter]
 isize = 5
-ialpha = 100
-lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#ffd600|#a52a2a|#32cd32|#4169e1|#8A2BE2
+ialpha = 40
+lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169e1|#8A2BE2
 
 [reycler]
 imaxsize = 50
