--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -17,14 +17,14 @@ licapture = 17|49
 licopy = 13
 
 [painter]
-isize = 5
-ialpha = 40
-lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169e1|#8A2BE2
+isize = 6
+ialpha = 43
+lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169e1|#8a2be2
 
 [reycler]
 imaxsize = 50
 
 [right_menu]
 lsavailablecommands = 
-lscurrentcommands = save|div|crop|copy|div|close|cut
+lscurrentcommands = save|div|crop|copy|div|close|cut|div
 
