--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -25,6 +25,6 @@ lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169
 imaxsize = 50
 
 [right_menu]
-lsavailablecommands = 
-lscurrentcommands = save|div|crop|copy|div|close|cut|div
+lsavailablecommands = Copy|Cut|Save
+lscurrentcommands = Close|div|Crop
 
