--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -8,7 +8,7 @@ irecyclecapacity = 1
 isaveoption = 0
 ishowsaveprompt = 1
 ssavelocation = 
-iuselastsave = 0
+iuselastsave = 1
 
 [global]
 licapture = 17|50
@@ -17,14 +17,17 @@ licapture = 17|50
 licopy = 13
 
 [painter]
-isize = 6
-ialpha = 43
+isize = 16
+ialpha = 45
 lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169e1|#8a2be2
 
 [reycler]
 imaxsize = 50
 
 [right_menu]
-lsavailablecommands = Copy|Cut|Save
-lscurrentcommands = Close|div|Crop
+lsavailablecommands = Copy|Cut
+lscurrentcommands = Close|div|Crop|Save|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)
+
+[snapshot]
+iquality = 100
 
