canvas selection fixed

--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -25,8 +25,8 @@ lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169
 imaxsize = 50
 
 [right_menu]
-lsavailablecommands = Copy|Cut
-lscurrentcommands = Close|div|Crop|Save|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)
+lsavailablecommands = 
+lscurrentcommands = Close|div|Save|Cut|Copy|Crop|div|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)|div|Toggle Painting|Clear Canvas
 
 [snapshot]
 iquality = 100
