canvas raster fixed for selection and scalings, boolean support for config manager

--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -17,9 +17,9 @@ licapture = 17|50
 licopy = 13
 
 [painter]
-isize = 16
-ialpha = 60
-lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169e1|#8a2be2
+isize = 3
+ialpha = 96
+lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169e1|#000000
 
 [reycler]
 imaxsize = 50
@@ -30,4 +30,5 @@ lscurrentcommands = Close|div|Save|Cut|Copy|Crop|div|Save (scaled)|Save (w/Canva
 
 [snapshot]
 iquality = 100
+bfastcrop = False
 
