--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -12,9 +12,18 @@ iuselastsave = 1
 
 [global]
 licapture = 17|50
+lirecycle = 
 
 [local]
-licopy = 13
+licopy = 27
+licut = 17|88
+liclose = 27
+lipaint = 80
+lisave = 17|70
+lizoom10 = 
+lishrink10 = 
+lizoom20 = 
+lishrink20 = 
 
 [painter]
 isize = 20
