recycler image reference removed to save memory

--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -11,7 +11,7 @@ ssavelocation =
 iuselastsave = 1
 
 [global]
-licapture = 17|50
+licapture = 17|18|83
 lirecycle = 
 
 [local]
@@ -26,8 +26,8 @@ lizoom20 =
 lishrink20 = 
 
 [painter]
-isize = 20
-ialpha = 82
+isize = 17
+ialpha = 72
 lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169e1|#000000
 
 [reycler]
@@ -35,7 +35,7 @@ imaxsize = 50
 
 [right_menu]
 lsavailablecommands = 
-lscurrentcommands = Close|div|Save|Cut|Copy|Crop|div|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)|div|Toggle Painting|Clear Canvas
+lscurrentcommands = Close|div|Save|Cut|Copy|Crop|div|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)|div|Toggle Painting|Clear Canvas|div
 
 [snapshot]
 iquality = 100
