right click to delete and various bug fixes

--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -11,7 +11,7 @@ ssavelocation =
 iuselastsave = 1
 
 [global]
-licapture = 17|18|83
+licapture = 51
 lirecycle = 
 
 [local]
@@ -27,14 +27,14 @@ lishrink20 =
 
 [painter]
 isize = 17
-ialpha = 72
-lscolors = #8446ff|#ffffff|#ff69b4|#dc143c|#fd6500|#fff399|#a52a2a|#32cd32|#4169e1|#000000
+ialpha = 66
+lscolors = #000000|#ffffff|#ff69b4|#dc143c|#fd6500|#ffd600|#a52a2a|#32ee66|#4169E1|#8A2BE2|#8A2BE2|#8A2BE2|#8A2BE2|#8A2BE2
 
 [reycler]
 imaxsize = 50
 
 [right_menu]
-lsavailablecommands = 
+lsavailablecommands = |Save|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)|Close|Crop|Toggle Painting|Clear Canvas
 lscurrentcommands = Close|div|Save|Cut|Copy|Crop|div|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)|div|Toggle Painting|Clear Canvas|div
 
 [snapshot]
