--- a/QtExperimental/config.ini
+++ b/QtExperimental/config.ini
@@ -3,7 +3,7 @@ istartup = 0
 istartmin = 0
 imintray = 0
 iminx = 0
-iuserecycle = 0
+iuserecycle = 1
 irecyclecapacity = 1
 isaveoption = 0
 ishowsaveprompt = 1
@@ -11,7 +11,7 @@ ssavelocation =
 iuselastsave = 1
 
 [global]
-licapture = 51
+licapture = 17|50
 lirecycle = 
 
 [local]
@@ -26,8 +26,8 @@ lizoom20 =
 lishrink20 = 
 
 [painter]
-isize = 17
-ialpha = 66
+isize = 11
+ialpha = 100
 lscolors = #000000|#ffffff|#ff69b4|#dc143c|#fd6500|#ffd600|#a52a2a|#32ee66|#4169E1|#8A2BE2|#8A2BE2|#8A2BE2|#8A2BE2|#8A2BE2
 
 [reycler]
@@ -35,7 +35,7 @@ imaxsize = 50
 
 [right_menu]
 lsavailablecommands = |Save|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)|Close|Crop|Toggle Painting|Clear Canvas
-lscurrentcommands = Close|div|Save|Cut|Copy|Crop|div|Save (scaled)|Save (w/Canvas)|Save (scaled w/Canvas)|div|Toggle Painting|Clear Canvas|div
+lscurrentcommands = Close|div|Save|Cut|Copy|Crop|div|Save (scaled)|div|Save (w/Canvas)|Save (scaled w/Canvas)|Toggle Painting|Clear Canvas|div|div|div|div
 
 [snapshot]
 iquality = 100
